src/parser/MinijavaParser.java
/* MinijavaParser.java */
/* Generated By:JavaCC: Do not edit this line. MinijavaParser.java */
package parser;
import syntaxtree.*;
import java.util.List;
import java.util.ArrayList;

public class MinijavaParser implements MinijavaParserConstants {
    public static void main(String args[]) throws ParseException {
        MinijavaParser parser = new MinijavaParser(System.in);
        Program prog = parser.parse();
        System.out.println("Parsing conclu\u00eddo com sucesso.");
    }

/* ========================
   Início da gramática
   ======================== */
  final public 
Program parse() throws ParseException {Program p;
    p = Program();
    jj_consume_token(0);
{if ("" != null) return p;}
    throw new Error("Missing return statement in function");
  }

  final public Program Program() throws ParseException {MainClass mainClass;
    ClassDecl classDecl;
    ClassDeclList classList = new ClassDeclList();
    mainClass = MainClass();
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case CLASS:{
        ;
        break;
        }
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      classDecl = ClassDeclaration();
classList.addElement(classDecl);
    }
{if ("" != null) return new Program(mainClass, classList);}
    throw new Error("Missing return statement in function");
  }

  final public MainClass MainClass() throws ParseException {Identifier classId;
    Identifier argId;
    Statement mainStmt;
    jj_consume_token(CLASS);
    classId = Identifier();
    jj_consume_token(LBRACE);
    jj_consume_token(PUBLIC);
    jj_consume_token(STATIC);
    jj_consume_token(VOID);
    jj_consume_token(MAIN);
    jj_consume_token(LPAREN);
    jj_consume_token(STRING);
    jj_consume_token(LBRACK);
    jj_consume_token(RBRACK);
    argId = Identifier();
    jj_consume_token(RPAREN);
    jj_consume_token(LBRACE);
    mainStmt = Statement();
    jj_consume_token(RBRACE);
    jj_consume_token(RBRACE);
{if ("" != null) return new MainClass(classId, argId, mainStmt);}
    throw new Error("Missing return statement in function");
  }

  final public ClassDecl ClassDeclaration() throws ParseException {Identifier classId;
    Identifier superId = null;
    VarDecl v;
    VarDeclList varDecls = new VarDeclList();
    MethodDecl m;
    MethodDeclList methodDecls = new MethodDeclList();
    jj_consume_token(CLASS);
    classId = Identifier();
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case EXTENDS:{
      jj_consume_token(EXTENDS);
      superId = Identifier();
      break;
      }
    default:
      jj_la1[1] = jj_gen;
      ;
    }
    jj_consume_token(LBRACE);
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case INT:
      case BOOLEAN:
      case ID:{
        ;
        break;
        }
      default:
        jj_la1[2] = jj_gen;
        break label_2;
      }
      v = VarDeclaration();
varDecls.addElement(v);
    }
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case PUBLIC:{
        ;
        break;
        }
      default:
        jj_la1[3] = jj_gen;
        break label_3;
      }
      m = MethodDeclaration();
methodDecls.addElement(m);
    }
    jj_consume_token(RBRACE);
if (superId == null)
            {if ("" != null) return new ClassDeclSimple(classId, varDecls, methodDecls);}
        else
            {if ("" != null) return new ClassDeclExtends(classId, superId, varDecls, methodDecls);}
    throw new Error("Missing return statement in function");
  }

  final public VarDecl VarDeclaration() throws ParseException {Type t;
    Identifier id;
    t = Type();
    id = Identifier();
    jj_consume_token(SEMICOLON);
{if ("" != null) return new VarDecl(t, id);}
    throw new Error("Missing return statement in function");
  }

  final public MethodDecl MethodDeclaration() throws ParseException {Type returnType;
    Identifier methodId;
    Type paramType;
    Identifier paramId;
    FormalList params = new FormalList();
    VarDecl v;
    VarDeclList varDecls = new VarDeclList();
    Statement s;
    StatementList statements = new StatementList();
    Exp returnExp;
    jj_consume_token(PUBLIC);
    returnType = Type();
    methodId = Identifier();
    jj_consume_token(LPAREN);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case INT:
    case BOOLEAN:
    case ID:{
      paramType = Type();
      paramId = Identifier();
params.addElement(new Formal(paramType, paramId));
      label_4:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case COMMA:{
          ;
          break;
          }
        default:
          jj_la1[4] = jj_gen;
          break label_4;
        }
        jj_consume_token(COMMA);
        paramType = Type();
        paramId = Identifier();
params.addElement(new Formal(paramType, paramId));
      }
      break;
      }
    default:
      jj_la1[5] = jj_gen;
      ;
    }
    jj_consume_token(RPAREN);
    jj_consume_token(LBRACE);
    label_5:
    while (true) {
      if (jj_2_1(2)) {
        ;
      } else {
        break label_5;
      }
      v = VarDeclaration();
varDecls.addElement(v);
    }
    label_6:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case IF:
      case WHILE:
      case SYSTEM_OUT_PRINTLN:
      case ID:
      case LBRACE:{
        ;
        break;
        }
      default:
        jj_la1[6] = jj_gen;
        break label_6;
      }
      s = Statement();
statements.addElement(s);
    }
    jj_consume_token(RETURN);
    returnExp = Expression();
    jj_consume_token(SEMICOLON);
    jj_consume_token(RBRACE);
{if ("" != null) return new MethodDecl(returnType, methodId, params, varDecls, statements, returnExp);}
    throw new Error("Missing return statement in function");
  }

  final public Type Type() throws ParseException {Token t;
    Identifier id;
    if (jj_2_2(2)) {
      jj_consume_token(INT);
      jj_consume_token(LBRACK);
      jj_consume_token(RBRACK);
{if ("" != null) return new IntArrayType();}
    } else {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case INT:{
        jj_consume_token(INT);
{if ("" != null) return new IntegerType();}
        break;
        }
      case BOOLEAN:{
        jj_consume_token(BOOLEAN);
{if ("" != null) return new BooleanType();}
        break;
        }
      case ID:{
        id = Identifier();
{if ("" != null) return new IdentifierType(id.toString());}
        break;
        }
      default:
        jj_la1[7] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    throw new Error("Missing return statement in function");
  }

  final public Statement Statement() throws ParseException {Statement s;
    Exp e1, e2;
    Identifier id;
    Statement s1, s2;
    List<Statement> stmts = new ArrayList<Statement>();
    StatementList sl = new StatementList();
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case LBRACE:{
      jj_consume_token(LBRACE);
      label_7:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case IF:
        case WHILE:
        case SYSTEM_OUT_PRINTLN:
        case ID:
        case LBRACE:{
          ;
          break;
          }
        default:
          jj_la1[8] = jj_gen;
          break label_7;
        }
        s1 = Statement();
stmts.add(s1);
      }
      jj_consume_token(RBRACE);
// Adiciona todos os statements ao StatementList
        for (Statement st : stmts) {
            sl.addElement(st);
        }
        {if ("" != null) return new Block(sl);}
      break;
      }
    case IF:{
      jj_consume_token(IF);
      jj_consume_token(LPAREN);
      e1 = Expression();
      jj_consume_token(RPAREN);
      s1 = Statement();
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case ELSE:{
        jj_consume_token(ELSE);
        s2 = Statement();
{if ("" != null) return new If(e1, s1, s2);}
        break;
        }
      default:
        jj_la1[9] = jj_gen;
{if ("" != null) return new If(e1, s1, null);}
      }
      break;
      }
    case WHILE:{
      jj_consume_token(WHILE);
      jj_consume_token(LPAREN);
      e1 = Expression();
      jj_consume_token(RPAREN);
      s1 = Statement();
{if ("" != null) return new While(e1, s1);}
      break;
      }
    case SYSTEM_OUT_PRINTLN:{
      jj_consume_token(SYSTEM_OUT_PRINTLN);
      jj_consume_token(LPAREN);
      e1 = Expression();
      jj_consume_token(RPAREN);
      jj_consume_token(SEMICOLON);
{if ("" != null) return new Print(e1);}
      break;
      }
    default:
      jj_la1[10] = jj_gen;
      if (jj_2_3(2)) {
        id = Identifier();
        jj_consume_token(ASSIGN);
        e1 = Expression();
        jj_consume_token(SEMICOLON);
{if ("" != null) return new Assign(id, e1);}
      } else {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case ID:{
          id = Identifier();
          jj_consume_token(LBRACK);
          e1 = Expression();
          jj_consume_token(RBRACK);
          jj_consume_token(ASSIGN);
          e2 = Expression();
          jj_consume_token(SEMICOLON);
{if ("" != null) return new ArrayAssign(id, e1, e2);}
          break;
          }
        default:
          jj_la1[11] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
    throw new Error("Missing return statement in function");
  }

  final public Exp Expression() throws ParseException {Exp e;
    e = ExpressionAnd();
{if ("" != null) return e;}
    throw new Error("Missing return statement in function");
  }

  final public Exp ExpressionAnd() throws ParseException {Exp e1, e2;
    e1 = ExpressionLT();
    label_8:
    while (true) {
      if (jj_2_4(2)) {
        ;
      } else {
        break label_8;
      }
      jj_consume_token(AND);
      e2 = ExpressionLT();
e1 = new And(e1, e2);
    }
{if ("" != null) return e1;}
    throw new Error("Missing return statement in function");
  }

  final public Exp ExpressionLT() throws ParseException {Exp e1, e2;
    e1 = ExpressionPlus();
    label_9:
    while (true) {
      if (jj_2_5(2)) {
        ;
      } else {
        break label_9;
      }
      jj_consume_token(LT);
      e2 = ExpressionPlus();
e1 = new LessThan(e1, e2);
    }
{if ("" != null) return e1;}
    throw new Error("Missing return statement in function");
  }

  final public Exp ExpressionPlus() throws ParseException {Exp e1, e2;
    e1 = ExpressionMinus();
    label_10:
    while (true) {
      if (jj_2_6(2)) {
        ;
      } else {
        break label_10;
      }
      jj_consume_token(PLUS);
      e2 = ExpressionMinus();
e1 = new Plus(e1, e2);
    }
{if ("" != null) return e1;}
    throw new Error("Missing return statement in function");
  }

  final public Exp ExpressionMinus() throws ParseException {Exp e1, e2;
    e1 = ExpressionTimes();
    label_11:
    while (true) {
      if (jj_2_7(2)) {
        ;
      } else {
        break label_11;
      }
      jj_consume_token(MINUS);
      e2 = ExpressionTimes();
e1 = new Minus(e1, e2);
    }
{if ("" != null) return e1;}
    throw new Error("Missing return statement in function");
  }

  final public Exp ExpressionTimes() throws ParseException {Exp e1, e2;
    e1 = ExpressionSuffix();
    label_12:
    while (true) {
      if (jj_2_8(2)) {
        ;
      } else {
        break label_12;
      }
      jj_consume_token(TIMES);
      e2 = ExpressionSuffix();
e1 = new Times(e1, e2);
    }
{if ("" != null) return e1;}
    throw new Error("Missing return statement in function");
  }

  final public Exp ExpressionSuffix() throws ParseException {Exp e1, e2;
    Identifier id;
    ExpList args = new ExpList();  // inicializa args aqui

    e1 = ExpressionUnary();
    label_13:
    while (true) {
      if (jj_2_9(3)) {
        ;
      } else {
        break label_13;
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case LBRACK:{
        jj_consume_token(LBRACK);
        e2 = Expression();
        jj_consume_token(RBRACK);
e1 = new ArrayLookup(e1, e2);
        break;
        }
      default:
        jj_la1[13] = jj_gen;
        if (jj_2_10(2)) {
          jj_consume_token(DOT);
          jj_consume_token(LENGTH);
e1 = new ArrayLength(e1);
        } else {
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case DOT:{
            jj_consume_token(DOT);
            id = Identifier();
            jj_consume_token(LPAREN);
            switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
            case TRUE:
            case FALSE:
            case THIS:
            case NEW:
            case ID:
            case INTEGER_LITERAL:
            case NOT:
            case LPAREN:{
              args = ArgList();
              break;
              }
            default:
              jj_la1[12] = jj_gen;
              ;
            }
            jj_consume_token(RPAREN);
e1 = new Call(e1, id, args);
            break;
            }
          default:
            jj_la1[14] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
        }
      }
    }
{if ("" != null) return e1;}
    throw new Error("Missing return statement in function");
  }

  final public Exp ExpressionUnary() throws ParseException {Exp e;
    if (jj_2_11(2)) {
      jj_consume_token(NOT);
      e = ExpressionUnary();
{if ("" != null) return new Not(e);}
    } else {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case TRUE:
      case FALSE:
      case THIS:
      case NEW:
      case ID:
      case INTEGER_LITERAL:
      case NOT:
      case LPAREN:{
        e = ExpressionTerminal();
{if ("" != null) return e;}
        break;
        }
      default:
        jj_la1[15] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    throw new Error("Missing return statement in function");
  }

  final public ExpList ArgList() throws ParseException {Exp e;
    ExpList list = new ExpList();
    e = Expression();
list.addElement(e);
    label_14:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case COMMA:{
        ;
        break;
        }
      default:
        jj_la1[16] = jj_gen;
        break label_14;
      }
      jj_consume_token(COMMA);
      e = Expression();
list.addElement(e);
    }
{if ("" != null) return list;}
    throw new Error("Missing return statement in function");
  }

  final public Exp ExpressionTerminal() throws ParseException {Token t;
    Identifier id;
    Exp e;
    List<Exp> args = new ArrayList<Exp>();
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case INTEGER_LITERAL:{
      t = jj_consume_token(INTEGER_LITERAL);
{if ("" != null) return new IntegerLiteral(Integer.parseInt(t.image));}
      break;
      }
    case TRUE:{
      jj_consume_token(TRUE);
{if ("" != null) return new True();}
      break;
      }
    case FALSE:{
      jj_consume_token(FALSE);
{if ("" != null) return new False();}
      break;
      }
    case ID:{
      id = Identifier();
{if ("" != null) return new IdentifierExp(id.toString());}
      break;
      }
    case THIS:{
      jj_consume_token(THIS);
{if ("" != null) return new This();}
      break;
      }
    default:
      jj_la1[17] = jj_gen;
      if (jj_2_12(2)) {
        jj_consume_token(NEW);
        jj_consume_token(INT);
        jj_consume_token(LBRACK);
        e = ExpressionAnd();
        jj_consume_token(RBRACK);
{if ("" != null) return new NewArray(e);}
      } else {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case NEW:{
          jj_consume_token(NEW);
          id = Identifier();
          jj_consume_token(LPAREN);
          jj_consume_token(RPAREN);
{if ("" != null) return new NewObject(id);}
          break;
          }
        case NOT:{
          jj_consume_token(NOT);
          e = Expression();
{if ("" != null) return e;}
          break;
          }
        case LPAREN:{
          jj_consume_token(LPAREN);
          e = Expression();
          jj_consume_token(RPAREN);
{if ("" != null) return e;}
          break;
          }
        default:
          jj_la1[18] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
    throw new Error("Missing return statement in function");
  }

  final public Identifier Identifier() throws ParseException {Token t;
    t = jj_consume_token(ID);
{if ("" != null) return new Identifier(t.image);}
    throw new Error("Missing return statement in function");
  }

  private boolean jj_2_1(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_1(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  private boolean jj_2_2(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_2(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  private boolean jj_2_3(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_3(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(2, xla); }
  }

  private boolean jj_2_4(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_4(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(3, xla); }
  }

  private boolean jj_2_5(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_5(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(4, xla); }
  }

  private boolean jj_2_6(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_6(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(5, xla); }
  }

  private boolean jj_2_7(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_7(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(6, xla); }
  }

  private boolean jj_2_8(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_8(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(7, xla); }
  }

  private boolean jj_2_9(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_9(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(8, xla); }
  }

  private boolean jj_2_10(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_10(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(9, xla); }
  }

  private boolean jj_2_11(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_11(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(10, xla); }
  }

  private boolean jj_2_12(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_12(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(11, xla); }
  }

  private boolean jj_3R_21()
 {
    if (jj_3R_24()) return true;
    Token xsp;
    while (true) {
      xsp = jj_scanpos;
      if (jj_3_9()) { jj_scanpos = xsp; break; }
    }
    return false;
  }

  private boolean jj_3_3()
 {
    if (jj_3R_16()) return true;
    if (jj_scan_token(ASSIGN)) return true;
    return false;
  }

  private boolean jj_3R_16()
 {
    if (jj_scan_token(ID)) return true;
    return false;
  }

  private boolean jj_3_8()
 {
    if (jj_scan_token(TIMES)) return true;
    if (jj_3R_21()) return true;
    return false;
  }

  private boolean jj_3R_20()
 {
    if (jj_3R_21()) return true;
    Token xsp;
    while (true) {
      xsp = jj_scanpos;
      if (jj_3_8()) { jj_scanpos = xsp; break; }
    }
    return false;
  }

  private boolean jj_3R_40()
 {
    if (jj_scan_token(LPAREN)) return true;
    if (jj_3R_26()) return true;
    return false;
  }

  private boolean jj_3R_15()
 {
    if (jj_3R_25()) return true;
    if (jj_3R_16()) return true;
    return false;
  }

  private boolean jj_3R_39()
 {
    if (jj_scan_token(NOT)) return true;
    if (jj_3R_26()) return true;
    return false;
  }

  private boolean jj_3R_38()
 {
    if (jj_scan_token(NEW)) return true;
    if (jj_3R_16()) return true;
    return false;
  }

  private boolean jj_3_7()
 {
    if (jj_scan_token(MINUS)) return true;
    if (jj_3R_20()) return true;
    return false;
  }

  private boolean jj_3_12()
 {
    if (jj_scan_token(NEW)) return true;
    if (jj_scan_token(INT)) return true;
    return false;
  }

  private boolean jj_3R_19()
 {
    if (jj_3R_20()) return true;
    Token xsp;
    while (true) {
      xsp = jj_scanpos;
      if (jj_3_7()) { jj_scanpos = xsp; break; }
    }
    return false;
  }

  private boolean jj_3R_37()
 {
    if (jj_scan_token(THIS)) return true;
    return false;
  }

  private boolean jj_3R_36()
 {
    if (jj_3R_16()) return true;
    return false;
  }

  private boolean jj_3R_35()
 {
    if (jj_scan_token(FALSE)) return true;
    return false;
  }

  private boolean jj_3R_34()
 {
    if (jj_scan_token(TRUE)) return true;
    return false;
  }

  private boolean jj_3R_32()
 {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_33()) {
    jj_scanpos = xsp;
    if (jj_3R_34()) {
    jj_scanpos = xsp;
    if (jj_3R_35()) {
    jj_scanpos = xsp;
    if (jj_3R_36()) {
    jj_scanpos = xsp;
    if (jj_3R_37()) {
    jj_scanpos = xsp;
    if (jj_3_12()) {
    jj_scanpos = xsp;
    if (jj_3R_38()) {
    jj_scanpos = xsp;
    if (jj_3R_39()) {
    jj_scanpos = xsp;
    if (jj_3R_40()) return true;
    }
    }
    }
    }
    }
    }
    }
    }
    return false;
  }

  private boolean jj_3R_33()
 {
    if (jj_scan_token(INTEGER_LITERAL)) return true;
    return false;
  }

  private boolean jj_3_6()
 {
    if (jj_scan_token(PLUS)) return true;
    if (jj_3R_19()) return true;
    return false;
  }

  private boolean jj_3R_18()
 {
    if (jj_3R_19()) return true;
    Token xsp;
    while (true) {
      xsp = jj_scanpos;
      if (jj_3_6()) { jj_scanpos = xsp; break; }
    }
    return false;
  }

  private boolean jj_3R_30()
 {
    if (jj_3R_16()) return true;
    return false;
  }
